<resources>
    <string name="app_name">NewsApp</string>
    <string name="news_description">News Title</string>
    <string name="placeholder_title">Setting higher standards in education-california</string>
    <string name="placeholder_date">April 17\'13</string>
    <string name="placeholder_time">9.00 am</string>
    <string name="no_internet_connection">no_internet_connection</string>
    <string name="no_news">No News found</string>
    <string name="web_url">Trail Text</string>
    <string name="no_articles">Currently there are no stories for you. Please come back later and try again.</string>

    <string name="pref_topic_default">pref_topic_0_label_value</string>
    <string name="pref_order_by_default">pref_order_by_newest_value</string>
    <string name="pref_topic_0_label_value" translatable="false">tag=world/series/the-upside-weekly-report</string>
</resources>
