<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#303F9F"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp">

        <LinearLayout
            android:layout_width="244dp"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:orientation="vertical">

            <TextView
                android:id="@+id/news_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:contentDescription="@string/news_description"
                android:gravity="top"
                android:padding="10dp"
                android:text="@string/placeholder_title"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/trailtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/web_url"
                android:textColor="#CFD8DC"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="Author"
                android:textColor="#E91E63" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="83dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_date"
                android:textColor="#F8BBD0" />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_time"
                android:textAllCaps="true"
                android:textColor="#F8BBD0" />

            <TextView
                android:id="@+id/section"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:paddingLeft="10dp"
                android:text="Section "
                android:textColor="#F8BBD0" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>

